# 1

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  render.yaml
apps/api/app/: config.py  main.py  models.py
apps/api/app/database/: database.py  models.py
apps/api/app/services/: __init__.py  audio_service.py  auth_service.py  gemini_service.py  job_queue_service.py  manim_service.py  marketplace_service.py  stripe_service.py  template_service.py  video_service.py
apps/api/scripts/: setup_db.sh  start.sh  video.sh
apps/api/tests/: conftest.py  test_main.py
apps/web/: README.md  next.config.ts  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.test.tsx  page.tsx
apps/web/app/studio/: page.tsx
apps/web/components/: Dither.tsx  MagicBento.tsx  SpotlightCard.tsx  animation-generator.tsx  animation-studio.tsx  auth-dialog.tsx  backend-health-badge.tsx  conversational-animator.tsx  header.tsx  homepage.tsx  infinite-scroll.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/components/landing/: cta-section.tsx  features-section.tsx  footer.tsx  hero-image.tsx  pricing-section.tsx
apps/web/components/studio/: chat-panel.tsx  code-panel.tsx  design-panel.tsx  header.tsx  sidebar.tsx  studio-shell.tsx  types.ts  workspace-access-dialog.tsx  workspace.tsx
apps/web/lib/: api.ts
apps/web/types/: next-themes.d.ts  prism-react-renderer.d.ts
backend/: package-lock.json  package.json
next/: package-lock.json
(+5 files in other folders)
