[project]
name = "manimations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.57.0",
    "PyJWT>=2.9.0",
    "manim>=0.19.1",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0.45",
    "stripe>=14.2.0",
    "psycopg2-binary>=2.9.11",
    "gtts>=2.5.1",
    "moviepy>=1.0.3",
]
